[workspace]
members = ["ether", "main", "model", "security-utils", "service", "tron", "wallet"]
exclude = ["sandbox"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/cwu"
homepage = "https://github.com/volodymyrd/cwu"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
aes-gcm = "0.10"
alloy = "1"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22.1"
bip39 = "2"
clap = "4"
colored = "2"
cwu-ether = { version = "0.0.1", path = "ether" }
cwu-model = { version = "0.0.1", path = "model" }
cwu-security-utils = { version = "0.0.1", path = "security-utils" }
cwu-service = { version = "0.0.1", path = "service" }
cwu-tron = { version = "0.0.1", path = "tron" }
cwu-wallet = { version = "0.0.1", path = "wallet" }
dialoguer = "0"
indicatif = "0"
rand = "0.9.2"
rand_core = "0.9.3"
serde = "1"
serde_json = "1"
termimad = "0"
thiserror = "2"
tokio = "1"
tronic = "0"
url = "2.5.7"
wasmtime = "38"
