[workspace]
members = [
    "ether",
    "main",
    "model",
    "security-utils",
    "service",
    "settings",
    "tron",
    "tron-v2",
    "wallet",
]
exclude = ["sandbox"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/cwu"
homepage = "https://github.com/volodymyrd/cwu"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
aes-gcm = "0.10"
alloy = "1"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22.1"
bip39 = "2"
bs58 = "0.5.1"
clap = "4"
colored = "2"
config = "0"
cwu-ether = { version = "0.0.1", path = "ether" }
cwu-model = { version = "0.0.1", path = "model" }
cwu-security-utils = { version = "0.0.1", path = "security-utils" }
cwu-service = { version = "0.0.1", path = "service" }
cwu-settings = { version = "0.0.1", path = "settings" }
cwu-tron = { version = "0.0.1", path = "tron" }
cwu-tron-v2 = { version = "0.0.1", path = "tron-v2" }
cwu-wallet = { version = "0.0.1", path = "wallet" }
dialoguer = "0"
hex = "0.4"
indicatif = "0"
k256 = "0.13.4"
prost = "0"
prost-types = "0"
rand = "0.9.2"
rand_core = "0.9.3"
reqwest = "0"
serde = "1"
serde_json = "1"
sha2 = "0.10.9"
sha3 = "0.10.8"
termimad = "0"
thiserror = "2"
tiny-hderive = "0.3.0"
tokio = "1"
tonic = "0"
tonic-prost = "0"
tonic-prost-build = "0"
tronic = "0"
url = "2.5.7"
wasmtime = "38"
zeroize = "1"
zip = "6"
