[package]
name = "cwu-core-address"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bs58 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
