[package]
name = "cwu-main"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
cwu-service = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["full"] }
