[package]
name = "cwu-main"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
wasm = ["cwu-service/wasm"]

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
cwu-model = { workspace = true }
cwu-service = { workspace = true }
cwu-wallet = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
termimad = { workspace = true }
tokio = { workspace = true, features = ["full"] }
