[package]
name = "cwu-sandbox"
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/cwu"
homepage = "https://github.com/volodymyrd/cwu"
license = "Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bip39 = { version = "2", features = ["all-languages"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
argon2 = { version = "0.5", features = ["std"] }

[dev-dependencies]
bitcoin_hashes = "0.13.0"

