[package]
name = "cwu-security-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
base64 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
