[package]
name = "cwu-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
cwu-ether = { workspace = true }
cwu-tron = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
url = "2.5.7"
wasmtime = { workspace = true }
