[package]
name = "cwu-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
wasm = ["wasmtime"]

[dependencies]
anyhow = { workspace = true }
cwu-ether = { workspace = true }
cwu-model = { workspace = true }
cwu-tron = { workspace = true }
cwu-wallet = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
wasmtime = { workspace = true, optional = true }
