[package]
name = "cwu-tron-protocol"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = {workspace = true, features = ["rt-multi-thread"]}

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
tonic-prost-build = { workspace = true }
zip = { workspace = true }
