[package]
name = "cwu-tron"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
cwu-settings = { workspace = true }
thiserror = { workspace = true }
tronic = { workspace = true, features = ["tonic-tls", "mock-provider"] }


[dev-dependencies]
prost = "0.12"
tokio = { workspace = true }
hex = { workspace = true }
serde ={ workspace = true }
serde_json ={ workspace = true }
