[package]
name = "cwu-tron"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
cwu-settings = { workspace = true }
thiserror = { workspace = true }
tronic = { workspace = true, features = ["tonic-tls", "mock-provider"] }

[dev-dependencies]
hex = { workspace = true }
prost = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
