[package]
name = "cwu-wallet"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bip39 = { version = "2", features = ["all-languages", "rand"] }
bs58 = { workspace = true }
cwu-model = { workspace = true }
cwu-security-utils = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tiny-hderive = { workspace = true }
zeroize = { workspace = true }
